# vectordata-rs

./: .dockerignore  .gitignore  Cargo.toml  README.md  clippy.toml  env.sh  variables.yaml
dataset/: Cargo.toml
dataset/src/: catalog.rs  config.rs  lib.rs  pipeline.rs  profile.rs  source.rs
slabtastic/: Cargo.toml  README.md
slabtastic/benches/: throughput.rs
slabtastic/docs/: index.md
slabtastic/docs/design/: slabtastic.md
slabtastic/docs/explanation/: append-only.md  concurrency.md  sparse-ordinals.md  why-slabtastic.md
slabtastic/docs/how-to/: append-data.md  async-progress.md  bulk-read-write.md  cli-maintenance.md  import-export.md  page-sizing.md
slabtastic/docs/reference/: cli.md  errors.md  footer-format.md  namespaces-page.md  page-layout.md  pages-page.md  wire-format.md
slabtastic/docs/tutorials/: getting-started.md  streaming-io.md
slabtastic/src/: config.rs  constants.rs  error.rs  footer.rs  lib.rs  main.rs  namespaces_page.rs  page.rs  pages_page.rs  reader.rs  task.rs  writer.rs
slabtastic/src/cli/: analyze.rs  append.rs  check.rs  explain.rs  export.rs  get.rs  import.rs  mod.rs  namespaces.rs  ordinal_range.rs  rewrite.rs
slabtastic/tests/: adversarial.rs  integration.rs  large_scale.rs
testserver/: Cargo.toml
testserver/src/: lib.rs
vecd/: Cargo.toml
vecd/src/: admin.rs  auth.rs  authz.rs  backup.rs  cli.rs  completion.rs  config.rs  credentials.rs  daemon.rs  db.rs  lib.rs  lifetime.rs  main.rs  model.rs  namespace.rs  ratelimit.rs  server.rs  service.rs  session.rs  store.rs  upload.rs
vecd/src/backend/: local.rs  mem.rs  mod.rs  s3.rs
vecd/tests/: auth_config_view_roundtrip.rs  backup_restore.rs  cli_end_to_end.rs  client_api.rs  push_against_vecd.rs  range_get.rs  read_auth.rs  resumable_upload.rs  transport_saturation.rs
vectordata/: Cargo.toml  README.md  build.rs
vectordata/docs/: access-datasets-from-rust.md  find-and-fetch-datasets.md
vectordata/src/: access.rs  backup.rs  chunked_http.rs  client_cli.rs  config.rs  credentials.rs  endpoint.rs  filters.rs  group.rs  io.rs  knn_entries.rs  lib.rs  metadata_schema.rs  model.rs  mounts.rs  settings.rs  storage.rs  typed_access.rs  update_check.rs  view.rs
vectordata/src/cache/: layout.rs  mod.rs  reader.rs
vectordata/src/catalog/: knn_entries.rs  mod.rs  resolver.rs  sources.rs
vectordata/src/dataset/: catalog.rs  config.rs  conformance.rs  expansion.rs  facet.rs  layout.rs  loader.rs  mod.rs  pipeline.rs  profile.rs  remote.rs  source.rs  view.rs
vectordata/src/datasets/: browser.rs  cache.rs  curlify.rs  derive.rs  describe.rs  drop_cache.rs  dyncomp.rs  filter.rs  list.rs  mod.rs  ping.rs  prebuffer.rs  precache.rs  probe.rs
vectordata/src/explore/: data_shell.rs  dataset_picker.rs  mod.rs  palette.rs  repl.rs  shared.rs  unified.rs  values_grid.rs
vectordata/src/formats/: anode.rs  anode_vernacular.rs  mod.rs
vectordata/src/merkle/: mod.rs  mref.rs  mstate.rs
vectordata/src/push/: binding.rs  checksums.rs  mod.rs  plan.rs  pushlog.rs  tests.rs
vectordata/src/transport/: http.rs  mod.rs  progress.rs  pump.rs  retry.rs
vectordata/tests/: cached_channel.rs  catalog_knn_entries_fallback.rs  chunked_http_stress.rs  data_access.rs  explore_tui.rs  explore_tui_convert.rs  explore_tui_fieldnav.rs  explore_tui_longurl.rs  explore_tui_remove.rs  facet_access.rs  http_access.rs  http_storage.rs  push_https.rs  transport.rs  typed_access.rs
vectordata/tests/support/: mod.rs  objectstore.rs  testserver.rs
vectordata/tests/tui_common/: mod.rs
veks/: .gitignore  Cargo.toml  README.md  build.rs  env.sh
veks-anode/: Cargo.toml  README.md
veks-anode/src/: anode.rs  anode_vernacular.rs  lib.rs
veks-anode/src/mnode/: mod.rs  scan.rs  tags.rs  vernacular.rs
veks-anode/src/pnode/: eval.rs  from_display.rs  mod.rs  vernacular.rs
veks-completion/: Cargo.toml  README.md  TODO.md
veks-completion-derive/: Cargo.toml
veks-completion-derive/src/: lib.rs
veks-completion/examples/: basic.rs  metricsql.rs
veks-completion/src/: cli.rs  lib.rs  options.rs  providers.rs
veks-core/: Cargo.toml  README.md
veks-core/src/: filters.rs  legacy_sweep.rs  lib.rs  paths.rs  term.rs
veks-core/src/formats/: convert.rs  facet.rs  mod.rs  parquet_compiler.rs  parquet_vector_compiler.rs  portable_io.rs  xvec_dir_compiler.rs
veks-core/src/ui/: event.rs  handle.rs  headless_sink.rs  logging_sink.rs  mod.rs  plain_sink.rs  ratatui_sink.rs  sink.rs  test_sink.rs
veks-io/: Cargo.toml  README.md
veks-io/examples/: mmap_access.rs  read_write.rs  varlen.rs
veks-io/src/: format.rs  lib.rs  traits.rs
veks-io/src/scalar/: convert.rs  mmap.rs  mod.rs  reader.rs  writer.rs
veks-io/src/xvec/: mmap.rs  mod.rs  reader.rs  varlen.rs  writer.rs
veks-pipeline/: Cargo.toml  README.md  build.rs
veks-pipeline/benches/: simd_distance.rs
veks-pipeline/examples/: inspect_predicate_slab.rs
veks-pipeline/src/: lib.rs
veks-pipeline/src/pipeline/: atomic_write.rs  blas_abi.rs  bound.rs  cli.rs  command.rs  dag.rs  dataset_lookup.rs  element_type.rs  gz_cache.rs  interpolate.rs  manifest.rs  mod.rs  progress.rs  provenance.rs  registry.rs  resource.rs  rng.rs  runner.rs  schema.rs  simd_distance.rs  variables.rs
veks-pipeline/tests/: command_edge_cases.rs  sized_profile_sign_round_trip.rs  survey_integration.rs
veks/docs/concepts/: command-documentation.md  mnode-and-pnode.md  predicated-datasets.md  resource-governance.md  slab-files.md
veks/docs/design/: 01-system-overview.md  04-command-catalog.md  05-dataset-specification.md  07-command-documentation.md  08-progress-display.md  README.md
veks/docs/examples/: mnode-json-roundtrip.md  pnode-sql-rendering.md  slab-inspect-cli.md
veks/docs/explanation/: dialect-leader-byte.md  resource-governor-design.md
veks/docs/howto/: render-mnode-as-json.md
veks/docs/reference/: import-command.md  (+5 more)
veks/examples/: sql_from_slab.rs
veks/src/: explore.rs  filters.rs  lib.rs  main.rs  term.rs
veks/tests/: check_and_import.rs  completion_double_tab.rs  dag_configurations.rs  e2e_http_sized_profiles.rs  e2e_pipeline.rs
(+578 files in other folders)
