[workspace]
members = [
    "vectordata",
    "veks-anode",
    "veks-core",
    "veks-pipeline",
    "veks-completion",
    "veks-completion-derive",
    "veks",
    "vecd",
    "slabtastic",
    "veks-io",
    "tools",
]
resolver = "3"

# Workspace lint policy. Member crates opt in via `[lints] workspace = true`.
[workspace.lints.clippy]
# This codebase is dense with SIMD/BLAS-style numeric kernels that
# index several parallel arrays by one loop ordinal (query x segment x
# accumulator). Rewriting those as zipped iterators obscures the
# kernel structure without changing codegen, so the lint is policy-
# allowed; prefer iterators in new non-kernel code regardless.
needless_range_loop = "allow"

[profile.bench]
debug = true

# Release with full DWARF debug info for `perf record --call-graph=dwarf`
# and source-level annotation in `perf report`. Frame pointers kept so
# call-graph fp also works. Inherits everything else from `release`.
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"
split-debuginfo = "off"
