[workspace]
members = [
    "vectordata",
    "veks-anode",
    "veks-core",
    "veks-pipeline",
    "veks-completion",
    "veks-completion-derive",
    "veks",
    "vecd",
    "slabtastic",
    "veks-io",
    "tools",
]
resolver = "3"

# cargo-workspaces (`cargo ws version` / `cargo ws publish`) release config.
#
#   allow_branch = "main"
#     We release from `main`; cargo-workspaces defaults to `master` and
#     would otherwise refuse (or need `--allow-branch main` every time).
#
#   no_individual_tags = true
#     Create ONLY the global `v<version>` tag, not a `<crate>@<version>`
#     tag per changed crate. This is load-bearing for releases: GitHub
#     fires NO push events when more than three tags are pushed at once,
#     and a multi-crate bump pushed 4–6 tags together — silently
#     swallowing the `v<version>` push so the release workflow never ran
#     (v1.6.0 and v1.6.1 shipped no GitHub Release for this reason). One
#     tag per push stays under the limit, so the `v*` push reliably
#     triggers `.github/workflows/build.yml`. (That workflow also keeps a
#     `workflow_dispatch` fallback for re-publishing any tag by hand.)
[workspace.metadata.workspaces]
allow_branch = "main"
no_individual_tags = true

# Workspace lint policy. Member crates opt in via `[lints] workspace = true`.
[workspace.lints.clippy]
# This codebase is dense with SIMD/BLAS-style numeric kernels that
# index several parallel arrays by one loop ordinal (query x segment x
# accumulator). Rewriting those as zipped iterators obscures the
# kernel structure without changing codegen, so the lint is policy-
# allowed; prefer iterators in new non-kernel code regardless.
needless_range_loop = "allow"

[profile.bench]
debug = true

# Release with full DWARF debug info for `perf record --call-graph=dwarf`
# and source-level annotation in `perf report`. Frame pointers kept so
# call-graph fp also works. Inherits everything else from `release`.
[profile.profiling]
inherits = "release"
debug = "full"
strip = "none"
split-debuginfo = "off"
