# Copyright (c) Jonathan Shook
# SPDX-License-Identifier: Apache-2.0

[package]
name = "vecd"
version = "1.2.2"
edition = "2024"
description = "vectordata endpoint daemon — an AAA gateway in front of object storage"
license = "Apache-2.0"
homepage = "https://github.com/nosqlbench/vectordata-rs"
repository = "https://github.com/nosqlbench/vectordata-rs"
readme = "../README.md"
keywords = ["vector", "dataset", "object-storage", "gateway", "rbac"]
categories = ["command-line-utilities", "network-programming", "web-programming::http-server"]

[dependencies]
# Web/runtime tier — the gateway proper.
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
# Stream the request body off the wire to backend storage in bounded
# chunks (StreamExt over axum's BodyDataStream) — no whole-object buffering.
futures-util = "0.3"
# TLS termination in-process (rustls; pure-Rust, matches vectordata's
# reqwest rustls choice). Plain HTTP when no cert is configured.
axum-server = { version = "0.7", features = ["tls-rustls"] }
# Self-signed cert generation for `vecd tls generate` (ring crypto, matching
# the rustls/ring backend already in the tree — no C toolchain needed).
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }

# Control-plane store. `bundled` matches the workspace's established
# rusqlite choice (veks-pipeline). The DB is the CAS authority + the
# live-reloadable control plane.
rusqlite = { version = "0.31", features = ["bundled"] }

# CLI + dynamic, DB-backed completions — the same idiom as the
# `vectordata` binary.
veks-completion = { path = "../veks-completion" }
veks-completion-derive = { path = "../veks-completion-derive" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
hex = "0.4"
rand = "0.9"
# RFC3339 timestamps for token expiry / lifecycle headers.
time = { version = "0.3", features = ["formatting", "parsing"] }
thiserror = "2.0.18"
anyhow = "1.0"
log = "0.4"
# Unix daemonization (fork/setsid/dup2) + process signalling for the
# `start`/`stop`/`status` lifecycle.
libc = "0.2"

# Provenance-awareness in lockstep with the client: the sentinel-name
# constants (.publish_url / pushlog.jsonl / SHA256SUMS) and the pushlog
# parser come straight from the client crate so server and client can
# never drift. default-features = false drops the client's clap/explore
# stack — vecd only needs the push core (binding/pushlog/checksums).
vectordata = { path = "../vectordata", version = "1.2.2", default-features = false }

[features]
default = []
# Encrypt the control-plane DB at the SQLite layer (SQLCipher). Off by
# default so the standard build needs no native crypto lib; when on, the
# `key` PRAGMA is applied from the config file and backups are encrypted
# by construction.
sqlcipher = ["rusqlite/bundled-sqlcipher"]
# Opt-in operational/integration scenarios that are too slow or
# resource-heavy for the default `cargo test` (e.g. transport saturation
# with a throttled proxy). Gated as `required-features` on their `[[test]]`
# targets so they compile/run only under `cargo test --features
# extended-tests` (or `cargo ta`, the workspace `--all-features` alias) —
# no `#[ignore]` pragmas.
extended-tests = []

[lib]
name = "vecd"
path = "src/lib.rs"

[[bin]]
name = "vecd"
path = "src/main.rs"

# Transport saturation scenarios — opt-in (see the `extended-tests` feature).
[[test]]
name = "transport_saturation"
path = "tests/transport_saturation.rs"
required-features = ["extended-tests"]

[dev-dependencies]
tempfile = "3.8"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "rustls", "json"] }
serde_json = "1"
