[package]
name = "vectordata"
version = "0.21.0"
edition = "2024"
description = "Rust implementation of vectordata tools for dataset.yaml"
license = "Apache-2.0"
homepage = "https://github.com/nosqlbench/vectordata-rs"
repository = "https://github.com/nosqlbench/vectordata-rs"
readme = "../README.md"
keywords = ["vector", "dataset", "ann", "testing", "automation"]
categories = ["filesystem", "network-programming", "science"]

[dependencies]
indexmap = { version = "2", features = ["serde"] }
veks-anode = { path = "../veks-anode", version = "0.17.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2.0.18"
anyhow = "1.0"
memmap2 = "0.9"
libc = "0.2"
byteorder = "1.5"
filetime = "0.2"
httpdate = "1"
log = "0.4"
sha2 = "0.10"
half = "2"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
url = "2.5"

[dev-dependencies]
axum = "0.8"
hex = "0.4"
tempfile = "3.8"
tokio = { version = "1", features = ["rt", "net", "macros"] }
tower-http = { version = "0.6", features = ["fs"] }
url = "2.5"
