[package]
name = "vectordata"
version = "1.1.4"
edition = "2024"
description = "Rust implementation of vectordata tools for dataset.yaml"
license = "Apache-2.0"
homepage = "https://github.com/nosqlbench/vectordata-rs"
repository = "https://github.com/nosqlbench/vectordata-rs"
readme = "../README.md"
keywords = ["vector", "dataset", "ann", "testing", "automation"]
categories = ["filesystem", "network-programming", "science"]

[dependencies]
indexmap = { version = "2", features = ["serde"] }
veks-anode = { path = "../veks-anode", version = "1.0.0" }
slabtastic = { path = "../slabtastic", version = "1.0.1" }
regex = "1"
crossterm = "0.28"
ratatui = { version = "0.29", features = ["all-widgets"] }
unicode-width = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2.0.18"
anyhow = "1.0"
memmap2 = "0.9"
libc = "0.2"
byteorder = "1.5"
filetime = "0.2"
httpdate = "1"
log = "0.4"
sha2 = "0.10"
half = "2"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
url = "2.5"
# Optional — only required by the `vectordata` binary. Pulled in by
# the default `cli` feature so `cargo install vectordata` produces a
# working binary with no `--features` ceremony. Library-only consumers
# can drop clap with `default-features = false`.
clap = { version = "4", features = ["derive", "string"], optional = true }
clap_complete = { version = "4", features = ["unstable-dynamic"], optional = true }

[features]
default = ["cli"]
# Enables the `vectordata` binary. Library users who don't need the
# binary can disable this with `default-features = false`.
cli = ["dep:clap", "dep:clap_complete"]

[[bin]]
name = "vectordata"
required-features = ["cli"]
path = "src/bin/vectordata.rs"

[dev-dependencies]
axum = "0.8"
hex = "0.4"
hyper = "1"
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
rand = { version = "0.9", default-features = false, features = ["std", "std_rng", "small_rng"] }
tempfile = "3.8"
tokio = { version = "1", features = ["rt", "net", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
url = "2.5"
