[package]
name = "vectordata"
version = "1.5.1"
edition = "2024"
description = "Rust implementation of vectordata tools for dataset.yaml"
license = "Apache-2.0"
homepage = "https://github.com/nosqlbench/vectordata-rs"
repository = "https://github.com/nosqlbench/vectordata-rs"
readme = "../README.md"
keywords = ["vector", "dataset", "ann", "testing", "automation"]
categories = ["filesystem", "network-programming", "science"]

[dependencies]
indexmap = { version = "2", features = ["serde"] }
veks-anode = { path = "../veks-anode", version = "1.0.0" }
slabtastic = { path = "../slabtastic", version = "1.0.1" }
regex = "1"
crossterm = "0.28"
ratatui = { version = "0.29", features = ["all-widgets"] }
unicode-width = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
# Per-origin client credential store (`~/.config/vectordata/credentials.toml`).
toml = "0.8"
thiserror = "2.0.18"
anyhow = "1.0"
memmap2 = "0.9"
libc = "0.2"
byteorder = "1.5"
filetime = "0.2"
httpdate = "1"
log = "0.4"
sha2 = "0.10"
half = "2"
# `default-features = false` drops `default-tls` (OpenSSL via native-
# tls) so a `*-unknown-linux-musl` static build doesn't need OpenSSL
# headers / libs on the build host. `rustls` is pure-Rust TLS that
# links cleanly into a static binary; no functional difference from
# native-tls for the URLs this crate fetches. The `json` feature
# wasn't actually used anywhere.
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "rustls", "json"] }
url = "2.5"
# Optional — only required by the `vectordata` binary. Pulled in by
# the default `cli` feature so `cargo install vectordata` produces a
# working binary with no `--features` ceremony. Library-only consumers
# can drop the CLI framework with `default-features = false`.
veks-completion = { path = "../veks-completion", optional = true, version = "1.3.0" }
veks-completion-derive = { path = "../veks-completion-derive", optional = true, version = "1.3.0" }
# Used by the `explore` subcommand's TUI for value similarity, seeded
# sampling, parallel batched analytics, and Ctrl-C abort handling.
# All kept optional so library-only consumers (cargo install
# --no-default-features ...) drop them out.
simsimd = { version = "6", optional = true }
rand_xoshiro = { version = "0.7", optional = true }
rand = { version = "0.9", optional = true }
rayon = { version = "1", optional = true }
# signal-hook is POSIX-flavoured; the explore TUI gates its single
# call site with `#[cfg(unix)]` and falls back to the OS default
# SIGINT handler on Windows. Kept as a regular optional dep (rather
# than `[target.'cfg(unix)'.dependencies]`) so feature-flag wiring
# stays simple — the unused crate on Windows is a tiny compile cost.
signal-hook = { version = "0.3", optional = true }

[features]
default = ["cli", "explore"]
# Enables the `vectordata` binary. Library users who don't need the
# binary can disable this with `default-features = false`.
cli = ["dep:veks-completion", "dep:veks-completion-derive"]
# Enables the `vectordata explore` interactive TUI subcommand. The
# crossterm/ratatui/unicode-width terminal stack is already a hard
# dep of vectordata for the existing datasets browser; this feature
# only adds the analytic stack (simsimd, rand, rand_xoshiro, rayon)
# plus a POSIX SIGINT handler (signal-hook, no-op on Windows).
# Library users who want a smaller dep tree can drop it with
# --no-default-features.
explore = [
    "dep:simsimd",
    "dep:rand_xoshiro",
    "dep:rand",
    "dep:rayon",
    "dep:signal-hook",
]

[[bin]]
name = "vectordata"
required-features = ["cli"]
path = "src/bin/vectordata.rs"

[dev-dependencies]
axum = "0.8"
hex = "0.4"
hyper = "1"
hyper-util = { version = "0.1", features = ["server", "server-auto", "tokio"] }
rand = { version = "0.9", default-features = false, features = ["std", "std_rng", "small_rng"] }
tempfile = "3.8"
tokio = { version = "1", features = ["rt", "net", "macros"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs"] }
url = "2.5"

[lints]
workspace = true
