[package]
name = "veks-completion-derive"
version = "1.4.0"
edition = "2024"
license = "Apache-2.0"
description = "Derive macro for the veks-completion CLI framework (the in-tree clap replacement)"
homepage = "https://github.com/nosqlbench/vectordata-rs"
repository = "https://github.com/nosqlbench/vectordata-rs"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
quote = "1"
proc-macro2 = "1"

[lints]
workspace = true
