[package]
name = "veks-core"
version = "0.11.0"
edition = "2024"
description = "Core utilities for veks — terminal, filters, UI, format I/O"
license = "Apache-2.0"
homepage = "https://github.com/nosqlbench/vectordata-rs"
repository = "https://github.com/nosqlbench/vectordata-rs"

[dependencies]
arrow = "54"
atty = "0.2"
byteorder = "1"
chrono = "0.4"
clap = { version = "4", features = ["derive", "string"] }
crossterm = "0.28"
half = "2"
libc = "0.2"
log = "0.4"
memmap2 = "0.9"
ndarray = "0.16"
ndarray-npy = "0.9"
parquet = "54"
ratatui = { version = "0.29", features = ["all-widgets"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
slabtastic = { path = "../slabtastic", version = "0.9.0" }
vectordata = { path = "../vectordata", version = "0.10.1" }

[dev-dependencies]
tempfile = "3"
