[package]
name = "veks-io"
version = "0.22.0"
edition = "2024"
description = "Standalone vector data I/O — read and write fvec, ivec, mvec, dvec, bvec, svec, npy, parquet, and slab formats"
license = "Apache-2.0"
homepage = "https://github.com/nosqlbench/vectordata-rs"
repository = "https://github.com/nosqlbench/vectordata-rs"
keywords = ["vector", "fvec", "ivec", "ann", "embeddings"]
categories = ["filesystem", "science", "encoding"]

[features]
default = []
npy = ["dep:ndarray", "dep:ndarray-npy"]
parquet = ["dep:arrow", "dep:parquet"]
slab = ["dep:slabtastic"]

[dependencies]
byteorder = "1"
half = "2"
libc = "0.2"
log = "0.4"
memmap2 = "0.9"

# Optional: npy format support
ndarray = { version = "0.16", optional = true }
ndarray-npy = { version = "0.9", optional = true }

# Optional: parquet format support
arrow = { version = "54", optional = true }
parquet = { version = "54", optional = true }

# Optional: slab format support
slabtastic = { path = "../slabtastic", version = "0.17.0", optional = true }

[dev-dependencies]
tempfile = "3"
