[package]
name = "veks-pipeline"
version = "1.0.0"
edition = "2024"
description = "Pipeline execution engine for veks"
license = "Apache-2.0"
homepage = "https://github.com/nosqlbench/vectordata-rs"
repository = "https://github.com/nosqlbench/vectordata-rs"

[features]
default = []
knnutils = ["dep:rand_mt"]
faiss = ["knnutils", "dep:faiss"]

[dependencies]
byteorder = "1"
faiss = { version = "0.13", features = ["static"], optional = true }
rand_mt = { version = "6", optional = true }
chrono = { version = "0.4", features = ["serde"] }
atty = "0.2"
clap = { version = "4", features = ["derive", "string"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
filetime = "0.2"
flate2 = "1"
half = "2"
indexmap = { version = "2", features = ["serde"] }
jaq-core = "1.5"
jaq-interpret = "1.5"
jaq-parse = "1.0"
jaq-std = "1.6"
libc = "0.2"
log = "0.4"
petgraph = "0.7"
rand = "0.9"
rand_distr = "0.5"
rand_xoshiro = "0.7"
rayon = "1"
regex = "1"
reqwest = { version = "0.13.1", features = ["blocking"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
quick-xml = "0.36"
signal-hook = "0.3"
simsimd = "6"
slabtastic = { path = "../slabtastic", version = "0.17.0" }
tempfile = "3"
tokio = { version = "1", features = ["full"] }
vectordata = { path = "../vectordata", version = "1.0.0" }
veks-core = { path = "../veks-core", version = "1.0.0" }
veks-completion = { path = "../veks-completion", version = "1.0.0" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "simd_distance"
harness = false
