[package]
name = "veks"
version = "0.3.1"
edition = "2024"
description = "A vector bulk data processing tool"
license = "Apache-2.0"
homepage = "https://github.com/nosqlbench/vectordata-rs"
repository = "https://github.com/nosqlbench/vectordata-rs"
readme = "README.md"
keywords = ["vector", "dataset", "ann", "testing", "automation"]
categories = ["filesystem", "network-programming", "science"]

[lib]
name = "veks"
path = "src/lib.rs"

[[bin]]
name = "veks"
path = "src/main.rs"

[dependencies]
arrow = "53"
atty = "0.2"
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "string"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
curl = "0.4"
env_logger = "0.11"
filetime = "0.2"
flate2 = "1"
half = "2"
indexmap = { version = "2", features = ["serde"] }
log = "0.4"
ndarray = "0.16"
ndarray-npy = "0.9"
parquet = "53"
petgraph = "0.7"
rand = "0.9"
regex = "1"
rayon = "1"
rand_distr = "0.5"
rand_xoshiro = "0.7"
libc = "0.2"
jaq-core = "1.5"
jaq-interpret = "1.5"
jaq-parse = "1.0"
jaq-std = "1.6"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
signal-hook = "0.3"
simsimd = "6"
rusqlite = { version = "0.31", features = ["bundled"] }
slabtastic = { path = "../slabtastic", version ="0.8.1" }
tokio = { version = "1", features = ["full"] }
crossterm = "0.28"
ratatui = { version = "0.29", features = ["all-widgets"] }
vectordata = { path = "../vectordata", version="0.3.1" }

[dev-dependencies]
shadow-terminal = "0.2"
tempfile = "3"
