[package]
name = "veks"
version = "0.21.0"
edition = "2024"
description = "A vector bulk data processing tool"
license = "Apache-2.0"
homepage = "https://github.com/nosqlbench/vectordata-rs"
repository = "https://github.com/nosqlbench/vectordata-rs"
readme = "README.md"
keywords = ["vector", "dataset", "ann", "testing", "automation"]
categories = ["filesystem", "network-programming", "science"]

[lib]
name = "veks"
path = "src/lib.rs"

[[bin]]
name = "veks"
path = "src/main.rs"

[dependencies]
atty = "0.2"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "string"] }
veks-completion = { path = "../veks-completion", version = "0.19.0" }
crossterm = "0.28"
env_logger = "0.11"
filetime = "0.2"
half = "2"
indexmap = { version = "2", features = ["serde"] }
log = "0.4"
rand = "0.9"
rand_xoshiro = "0.7"
ratatui = { version = "0.29", features = ["all-widgets"] }
rayon = "1"
regex = "1"
reqwest = { version = "0.13.1", features = ["blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
signal-hook = "0.3"
simsimd = "6"
unicode-width = "0.2"
slabtastic = { path = "../slabtastic", version = "0.17.0" }
vectordata = { path = "../vectordata", version = "0.21.0" }
veks-core = { path = "../veks-core", version = "0.21.0" }
veks-pipeline = { path = "../veks-pipeline", version = "0.21.0" }
libc = "0.2.183"

[features]
# `knnutils` is on by default because `prepare bootstrap` emits
# `compute knn-blas` as its canonical KNN engine (numpy / knn_utils
# kernel parity with segment cache + streaming pread). Without this
# feature, generated dataset.yaml files reference a command that isn't
# registered. Users who can't link a system BLAS can opt out with
# `--no-default-features`; bootstrap falls back to `compute knn` (stdarch)
# in that case.
default = ["knnutils"]
knnutils = ["veks-pipeline/knnutils"]
faiss = ["knnutils", "veks-pipeline/faiss"]

[dev-dependencies]
arrow = "54"
parquet = "54"
shadow-terminal = "0.2"
tempfile = "3"
# Used by the HTTP-served sized-profile e2e test (tests/e2e_http_sized_profiles.rs).
# Mirrors the stack the vectordata crate uses for its own HTTP access tests —
# axum + tower-http's ServeDir gives us a standards-compliant Range/HEAD
# static server that the vectordata client then hits through its public
# `TestDataGroup::load(url)` API.
axum = "0.8"
tokio = { version = "1", features = ["rt", "net", "macros"] }
tower-http = { version = "0.6", features = ["fs"] }
url = "2.5"
